@@ -82,10 +82,7 @@
                         "content-type": "application/json"
                     },
                     "headers_sent": true,
-                    "status": {
-                        "code": 200,
-                        "message": "OK"
-                    }
+                    "status_code": 200
                 },
                 "system": {
                     "architecture": "x64",
